--- a/index.html
+++ b/index.html
@@ -3,9 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Status Page</title>
+    <style>
+        body {
+            font-family: Asimov, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000000;
+            color: #ffffff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            height: 100vh;
+        }
+        .status {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .status-dot {
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 10px;
+        }
+        .status-online {
+            background-color: #dc3545;
+        }
+        .status-offline {
+            background-color: #;
+        }
+        .status-maintenance {
+            background-color: #;
+        }
+        h1 {
+            font-size: 1.5rem;
+            margin: 0;
+        }
+        .incidents {
+            width: 90%;
+            max-width: 600px;
+            background-color: #000;
+            border: 1px solid #dee2e6;
+            border-radius: 5px;
+            padding: 15px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .incident-item {
+            border-bottom: 1px solid #dee2e6;
+            padding: 10px 0;
+        }
+        .incident-item:last-child {
+            border-bottom: none;
+        }
+        .incident-title {
+            font-weight: bold;
+            color: #343a40;
+        }
+        .incident-time {
+            font-size: 0.9rem;
+            color: #6c757d;
+        }
+    </style>
 </head>
 <body>
-    <h1>test</h1>
+    <div class="status">
+        <span class="status-dot status-online"></span>
+        <h1>System Status: Down</h1>
+    </div>
+    <div class="incidents">
+        <h2>Issues</h2>
+        <div class="incident-item">
+            <p class="incident-title">Windows Update: We have found the issue and are waiting for systems to update so CT can get back online.</p>
+            <p class="incident-time">8:11 PM EST 12/20/24</p>
+    </div>
 </body>
 </html>
