--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <h2>Issues</h2>
         <div class="incident-item">
             <p class="incident-title">Windows Update: We have found the issue and are waiting for systems to update so CT can get back online.</p>
+            <p class="incident-title">Update 8:32PM EST: The situation seems to be fixed. All systems restarting. CT should be back in a few minutes.</p>
             <p class="incident-time">8:11 PM EST 12/20/24</p>
     </div>
 </body>
