--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             margin-right: 10px;
         }
         .status-online {
-            background-color: #dc3545;
+            background-color: #008000;
         }
         .status-offline {
             background-color: #;
@@ -71,7 +71,7 @@
 <body>
     <div class="status">
         <span class="status-dot status-online"></span>
-        <h1>System Status: About to start</h1>
+        <h1>System Status: All systems operational</h1>
     </div>
     <div class="incidents">
         <h2>Issues</h2>
@@ -79,6 +79,7 @@
             <p class="incident-title">Windows Update: We have found the issue and are waiting for systems to update so CT can get back online.</p>
             <p class="incident-title">Update 8:32PM EST: The situation seems to be fixed. All systems restarting. CT should be back in a few minutes.</p>
             <p class="incident-title">Update 8:37PM EST: CT Server is back up.</p>
+            <p class="incident-title">Update 8:43PM EST: Issue fixed!</p>
             <p class="incident-time">8:11 PM EST 12/20/24</p>
     </div>
 </body>
